<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.lordi.restaurantcastlesuppliesmanager.views.EditorActivity">

    <item
        android:id="@+id/action_delete_this_item"
        android:icon="@drawable/binicon"
        android:title="@string/delete_this_entry"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/additemicon"
        android:title="@string/save_supply_entry"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_insert_dummy_data"
        android:title="@string/fill_editor_with_test_data"
        app:showAsAction="never" />
</menu>