<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.lordi.restaurantcastlesuppliesmanager.views.CatalogActivity">

    <item
        android:id="@+id/action_delete_all_data"
        android:icon="@drawable/binicon"
        android:title="@string/delete_all_entries_in_the_database"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_insert_dummy_data"
        android:title="@string/insert_test_data"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_email_all_data"
        android:title="@string/send_database_be_email"
        android:icon="@drawable/email_icon"
        app:showAsAction="ifRoom" />
</menu>