<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="122dp"
        android:padding="@dimen/list_item_border">

        <ImageView
            android:id="@+id/shelveIcon"
            android:src="@drawable/dock_4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            style="@style/background_shelve" />

        <TextView
            android:id="@+id/item_id"
            style="@style/item_text_style"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textColor="#004D40"
            android:textStyle="bold"
            android:textSize="@dimen/id_text_size"
            app:layout_constraintBottom_toTopOf="@+id/item_image"
            app:layout_constraintEnd_toStartOf="@+id/item_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/id" />

        <TextView
            android:id="@+id/item_category"
            style="@style/item_text_style"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/item_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.242"
            tools:text="@string/category" />

        <ImageView
            android:id="@+id/item_image"
            app:layout_constraintBottom_toBottomOf="@+id/shelveIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4"
            tools:src="@drawable/inv300"
            style="@style/thumbnail" />

        <TextView
            android:id="@+id/item_name"
            style="@style/item_text_style"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/item_code"
            app:layout_constraintStart_toStartOf="@+id/item_code"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Product name" />

        <!-- item code -->
        <TextView
            android:id="@+id/item_code"
            style="@style/item_text_style"
            android:textColor="#827717"
            android:textSize="@dimen/subcategories_text_size"
            app:layout_constraintBottom_toTopOf="@+id/item_quantity"
            app:layout_constraintLeft_toRightOf="@+id/item_image"
            app:layout_constraintTop_toBottomOf="@id/item_name"
            tools:text="Unique product code" />



        <TextView
            android:id="@+id/item_quantity"
            style="@style/item_text_style"
            android:layout_height="23dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="48dp"
            android:textColor="#000000"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/shelveIcon"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.435"
            tools:text="Quantity of the product" />

        <TextView
            android:id="@+id/item_price"
            style="@style/item_text_style"
            android:layout_width="78dp"
            android:layout_height="32dp"
            android:layout_marginBottom="56dp"
            android:layout_marginEnd="4dp"
            android:textColor="#000000"
            android:textSize="@dimen/subcategories_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/shelveIcon"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Price for the KG/Box/Etc" />

        <TextView
            android:id="@+id/textView"
            android:text="@string/q"
            app:layout_constraintBottom_toBottomOf="@+id/shelveIcon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_name"
            app:layout_constraintVertical_bias="0.0"
            style="@style/price" />

        <Button
            android:id="@+id/sell_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_price"
            style="@style/sell_button" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>